# RGBDSyncSDK

./: .gitmodules  Kinect2_SDKConfig.cmake  README.md
GenerateVideoFromRecords/: CMakeLists.txt  Main.cpp  README.md
Kinect/: KinectBody.h  KinectRecording.h  KinectSensor-v2.cpp  README.md  RecordingManagement.h
RecordKinect/: CMakeLists.txt  Main.cpp
mobile_rgbd_reader/: CMakeLists.txt  DepthToCameraTable.raw  README.md  package.xml
mobile_rgbd_reader/config/: kinect2.ini  kinect2_0.ini  kinect2_rgb.ini  robulab.rviz  rviz.rviz
mobile_rgbd_reader/launch/: mobile_rgbd_reader.launch
mobile_rgbd_reader/src/: mobile_rgbd_reader.cpp
